tests/errors/lex_number.java
public class lex_number {
public static	float c = 4324f53d20s;
}
